# RAISE

./: .gitignore  LICENSE  pyproject.toml  readme.md  requirements.txt
configs/: configforalgo_fullspace.yaml  configforalgo_fullspace_text.yaml  demo.yaml
configs/algorithms/: default.yaml
configs/experiments/: configforalgo_10k.yaml  configforalgo_1k.yaml  configforalgomultimodal.yaml
configs/search_space/: multimodal.yaml  text.yaml
data/datasets/hotpotqa/: corpus.json  hotpotqa_sample.jsonl  qa.json  qa_transfer.py
data/datasets/msmarco/: corpus.json  qa.json  qa_transfer.py
data/datasets/squadv2/: corpus.json  qa.json  qa_transfer.py
data/datasets/triviaqa/: corpus.json  qa.json  qa_transfer.py
docs/: 01-overview.md  02-quickstart.md  03-project-structure.md  04-api-reference.md  05-cli-reference.md  06-config-system.md  07-experiments.md  08-compatibility-matrix.md  09-migration-guide.md  10-faq-troubleshooting.md
docs/en/: README.md  quickstart.md
experiments/: README.md  analyze_five_algorithms.py  collect_grid_text_dataset.py  run_five_algorithms.py  run_four_algorithms.py  run_qa_size_ablation.py
src/raisex/api/: __init__.py  public.py
src/raisex/cli/: algo_cli.py  eval_cli.py
src/raisex/core/: config_loader.py  config_validator.py  evaluation_service.py  search_space_service.py
src/raisex/llmfactory/: llmfactory.py
src/raisex/pipelines/multimodal/: pipeline.py
src/raisex/pipelines/text/: pipeline.py  pipelineconfig.yaml
src/raisex/search/algorithms/: coordinate_descent.py  cross_entropy.py  doctor_grpo.py  greedy.py  grpo.py  (+12 more)
(+14 files in other folders)
